--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
+  },
+  "scripts": {
+    "build": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   }
 }
